--- a/protocols.html
+++ b/protocols.html
@@ -30,6 +30,13 @@
         .accordion-header.active + .accordion-content {
             display: block;
         }
+        select {
+            background-color: #1A1A1A;
+            border: 1px solid #333;
+            color: white;
+            border-radius: 0.5rem;
+            padding: 0.3rem 0.5rem;
+        }
     </style>
 </head>
 <body class="min-h-screen bg-[#0A0A0A]">
@@ -37,30 +44,41 @@
     <header class="px-4 py-6 border-b border-[#333333]">
         <div class="max-w-6xl mx-auto flex justify-between items-center">
             <a href="index.html" class="text-2xl font-medium">Crisis Beacon</a>
-            <nav class="flex items-center gap-4 text-sm">
-                <a href="dashboard.html" class="hover:text-blue-400">Dashboard</a>
-                <a href="volunteer.html" class="hover:text-blue-400">Volunteers</a>
-                <a href="protocols.html" class="text-blue-400 font-medium">Protocols</a>
-            </nav>
+            <div class="flex items-center gap-4">
+                <nav class="flex items-center gap-4 text-sm">
+                    <a data-key="dashboard" href="dashboard.html" class="hover:text-blue-400">Dashboard</a>
+                    <a data-key="volunteers" href="volunteer.html" class="hover:text-blue-400">Volunteers</a>
+                    <a data-key="protocols" href="protocols.html" class="text-blue-400 font-medium">Protocols</a>
+                </nav>
+                <select id="languageSelect">
+                    <option value="en">English</option>
+                    <option value="hi">हिंदी</option>
+                    <option value="mr">मराठी</option>
+                </select>
+            </div>
         </div>
     </header>
 
     <!-- Content -->
     <main class="max-w-5xl mx-auto px-4 py-12">
-        <h1 class="text-3xl font-semibold mb-8 text-center">Emergency Response Protocols</h1>
+        <h1 data-key="title" class="text-3xl font-semibold mb-8 text-center">
+            Emergency Response Protocols
+        </h1>
 
         <!-- General Safety Protocols -->
         <div class="card p-6 mb-6">
             <button class="accordion-header flex justify-between items-center w-full text-left font-medium text-lg">
-                <span><i data-feather="shield" class="inline w-5 h-5 mr-2 text-blue-400"></i> General Safety Guidelines</span>
+                <span><i data-feather="shield" class="inline w-5 h-5 mr-2 text-blue-400"></i>
+                    <span data-key="generalSafety">General Safety Guidelines</span>
+                </span>
                 <i data-feather="chevron-down" class="w-5 h-5"></i>
             </button>
             <div class="accordion-content mt-2">
                 <ul class="list-disc pl-6 space-y-2">
-                    <li>Always wear your safety gear before entering a disaster zone.</li>
-                    <li>Never move alone — coordinate with your assigned team leader.</li>
-                    <li>Report any hazards or missing supplies immediately through the app.</li>
-                    <li>Stay aware of surroundings; aftershocks or secondary hazards may occur.</li>
+                    <li data-key="s1">Always wear your safety gear before entering a disaster zone.</li>
+                    <li data-key="s2">Never move alone — coordinate with your assigned team leader.</li>
+                    <li data-key="s3">Report any hazards or missing supplies immediately through the app.</li>
+                    <li data-key="s4">Stay aware of surroundings; aftershocks or secondary hazards may occur.</li>
                 </ul>
             </div>
         </div>
@@ -68,15 +86,17 @@
         <!-- Medical Emergency Protocols -->
         <div class="card p-6 mb-6">
             <button class="accordion-header flex justify-between items-center w-full text-left font-medium text-lg">
-                <span><i data-feather="activity" class="inline w-5 h-5 mr-2 text-red-400"></i> Medical Emergency Protocols</span>
+                <span><i data-feather="activity" class="inline w-5 h-5 mr-2 text-red-400"></i>
+                    <span data-key="medical">Medical Emergency Protocols</span>
+                </span>
                 <i data-feather="chevron-down" class="w-5 h-5"></i>
             </button>
             <div class="accordion-content mt-2">
                 <ul class="list-disc pl-6 space-y-2">
-                    <li>Check for pulse and breathing — administer CPR if trained.</li>
-                    <li>Use emergency bandages to stop bleeding immediately.</li>
-                    <li>Prioritize evacuation for victims with severe trauma.</li>
-                    <li>Use the app’s SOS feature to request medical reinforcement.</li>
+                    <li data-key="m1">Check for pulse and breathing — administer CPR if trained.</li>
+                    <li data-key="m2">Use emergency bandages to stop bleeding immediately.</li>
+                    <li data-key="m3">Prioritize evacuation for victims with severe trauma.</li>
+                    <li data-key="m4">Use the app’s SOS feature to request medical reinforcement.</li>
                 </ul>
             </div>
         </div>
@@ -84,14 +104,16 @@
         <!-- Communication Protocols -->
         <div class="card p-6 mb-6">
             <button class="accordion-header flex justify-between items-center w-full text-left font-medium text-lg">
-                <span><i data-feather="radio" class="inline w-5 h-5 mr-2 text-yellow-400"></i> Communication & Reporting</span>
+                <span><i data-feather="radio" class="inline w-5 h-5 mr-2 text-yellow-400"></i>
+                    <span data-key="comm">Communication & Reporting</span>
+                </span>
                 <i data-feather="chevron-down" class="w-5 h-5"></i>
             </button>
             <div class="accordion-content mt-2">
                 <ul class="list-disc pl-6 space-y-2">
-                    <li>Use in-app chat for team communication — avoid personal channels.</li>
-                    <li>Report every mission update within 15 minutes of action.</li>
-                    <li>If offline, record updates manually and sync when online.</li>
+                    <li data-key="c1">Use in-app chat for team communication — avoid personal channels.</li>
+                    <li data-key="c2">Report every mission update within 15 minutes of action.</li>
+                    <li data-key="c3">If offline, record updates manually and sync when online.</li>
                 </ul>
             </div>
         </div>
@@ -99,24 +121,26 @@
         <!-- Evacuation Protocols -->
         <div class="card p-6 mb-6">
             <button class="accordion-header flex justify-between items-center w-full text-left font-medium text-lg">
-                <span><i data-feather="map-pin" class="inline w-5 h-5 mr-2 text-green-400"></i> Evacuation Protocols</span>
+                <span><i data-feather="map-pin" class="inline w-5 h-5 mr-2 text-green-400"></i>
+                    <span data-key="evac">Evacuation Protocols</span>
+                </span>
                 <i data-feather="chevron-down" class="w-5 h-5"></i>
             </button>
             <div class="accordion-content mt-2">
                 <ul class="list-disc pl-6 space-y-2">
-                    <li>Follow pre-mapped safe routes shown in the mission dashboard.</li>
-                    <li>Assist elderly and disabled individuals first.</li>
-                    <li>Keep evacuees calm; avoid panic through clear communication.</li>
-                    <li>Verify headcount before marking an area as cleared.</li>
+                    <li data-key="e1">Follow pre-mapped safe routes shown in the mission dashboard.</li>
+                    <li data-key="e2">Assist elderly and disabled individuals first.</li>
+                    <li data-key="e3">Keep evacuees calm; avoid panic through clear communication.</li>
+                    <li data-key="e4">Verify headcount before marking an area as cleared.</li>
                 </ul>
             </div>
         </div>
 
         <!-- Contact Section -->
         <div class="text-center mt-12">
-            <p class="text-[#D3D3D3] mb-4">Need clarification on a specific procedure?</p>
+            <p data-key="helpText" class="text-[#D3D3D3] mb-4">Need clarification on a specific procedure?</p>
             <a href="sos.html" class="bg-red-600 text-white px-6 py-3 rounded-lg font-medium hover:bg-red-700 transition-all inline-flex items-center gap-2">
-                <i data-feather="alert-circle" class="w-4 h-4"></i> Contact Command Center
+                <i data-feather="alert-circle" class="w-4 h-4"></i> <span data-key="contact">Contact Command Center</span>
             </a>
         </div>
     </main>
@@ -132,6 +156,98 @@
                 const icon = header.querySelector('i[data-feather="chevron-down"]');
                 content.classList.toggle('open');
                 icon.classList.toggle('rotate-180');
+            });
+        });
+
+        // Language translations
+        const translations = {
+            en: {
+                dashboard: "Dashboard",
+                volunteers: "Volunteers",
+                protocols: "Protocols",
+                title: "Emergency Response Protocols",
+                generalSafety: "General Safety Guidelines",
+                s1: "Always wear your safety gear before entering a disaster zone.",
+                s2: "Never move alone — coordinate with your assigned team leader.",
+                s3: "Report any hazards or missing supplies immediately through the app.",
+                s4: "Stay aware of surroundings; aftershocks or secondary hazards may occur.",
+                medical: "Medical Emergency Protocols",
+                m1: "Check for pulse and breathing — administer CPR if trained.",
+                m2: "Use emergency bandages to stop bleeding immediately.",
+                m3: "Prioritize evacuation for victims with severe trauma.",
+                m4: "Use the app’s SOS feature to request medical reinforcement.",
+                comm: "Communication & Reporting",
+                c1: "Use in-app chat for team communication — avoid personal channels.",
+                c2: "Report every mission update within 15 minutes of action.",
+                c3: "If offline, record updates manually and sync when online.",
+                evac: "Evacuation Protocols",
+                e1: "Follow pre-mapped safe routes shown in the mission dashboard.",
+                e2: "Assist elderly and disabled individuals first.",
+                e3: "Keep evacuees calm; avoid panic through clear communication.",
+                e4: "Verify headcount before marking an area as cleared.",
+                helpText: "Need clarification on a specific procedure?",
+                contact: "Contact Command Center"
+            },
+            hi: {
+                dashboard: "डैशबोर्ड",
+                volunteers: "स्वयंसेवक",
+                protocols: "प्रोटोकॉल",
+                title: "आपातकालीन प्रतिक्रिया प्रोटोकॉल",
+                generalSafety: "सामान्य सुरक्षा दिशानिर्देश",
+                s1: "आपदा क्षेत्र में प्रवेश करने से पहले हमेशा सुरक्षा उपकरण पहनें।",
+                s2: "कभी अकेले न जाएं — अपने टीम लीडर से समन्वय करें।",
+                s3: "किसी भी खतरे या कमी को तुरंत ऐप के माध्यम से रिपोर्ट करें।",
+                s4: "परिस्थिति से सतर्क रहें; आफ्टरशॉक या द्वितीयक खतरे हो सकते हैं।",
+                medical: "चिकित्सा आपातकालीन प्रोटोकॉल",
+                m1: "नाड़ी और सांस की जांच करें — प्रशिक्षित हैं तो सीपीआर दें।",
+                m2: "खून रोकने के लिए तुरंत आपातकालीन पट्टियाँ लगाएँ।",
+                m3: "गंभीर चोट वाले पीड़ितों को पहले निकालें।",
+                m4: "चिकित्सा सहायता के लिए ऐप के SOS फीचर का उपयोग करें।",
+                comm: "संचार और रिपोर्टिंग",
+                c1: "टीम संचार के लिए इन-ऐप चैट का उपयोग करें — व्यक्तिगत चैनल से बचें।",
+                c2: "हर मिशन अपडेट को कार्रवाई के 15 मिनट के भीतर रिपोर्ट करें।",
+                c3: "ऑफ़लाइन होने पर मैन्युअल रूप से रिकॉर्ड करें और ऑनलाइन होने पर सिंक करें।",
+                evac: "निकासी प्रोटोकॉल",
+                e1: "मिशन डैशबोर्ड में दिखाए गए पूर्व-मैप किए गए सुरक्षित मार्गों का पालन करें।",
+                e2: "सबसे पहले बुजुर्गों और विकलांग व्यक्तियों की मदद करें।",
+                e3: "निकास के दौरान शांत रहें और स्पष्ट संवाद बनाए रखें।",
+                e4: "क्षेत्र को सुरक्षित घोषित करने से पहले हेडकाउंट की पुष्टि करें।",
+                helpText: "किसी विशेष प्रक्रिया पर स्पष्टीकरण चाहिए?",
+                contact: "कमांड सेंटर से संपर्क करें"
+            },
+            mr: {
+                dashboard: "डॅशबोर्ड",
+                volunteers: "स्वयंसेवक",
+                protocols: "प्रोटोकॉल",
+                title: "आपत्कालीन प्रतिसाद प्रोटोकॉल",
+                generalSafety: "सामान्य सुरक्षा मार्गदर्शक तत्त्व",
+                s1: "आपत्ती क्षेत्रात प्रवेश करण्यापूर्वी नेहमी सुरक्षा साधने घाला.",
+                s2: "कधीही एकटे जाऊ नका — आपल्या टीम लीडरशी समन्वय साधा.",
+                s3: "कोणत्याही धोका किंवा हरवलेल्या वस्तूची तात्काळ अॅपद्वारे नोंद करा.",
+                s4: "सभोवतालच्या परिस्थितीची खबरदारी घ्या; आफ्टरशॉक होऊ शकतात.",
+                medical: "वैद्यकीय आपत्कालीन प्रोटोकॉल",
+                m1: "नाडी आणि श्वास तपासा — प्रशिक्षण घेतले असल्यास सीपीआर द्या.",
+                m2: "रक्तस्त्राव थांबवण्यासाठी आपत्कालीन पट्ट्या वापरा.",
+                m3: "गंभीर जखमींच्या स्थलांतराला प्राधान्य द्या.",
+                m4: "वैद्यकीय मदतीसाठी अॅपमधील SOS फीचर वापरा.",
+                comm: "संवाद आणि अहवाल",
+                c1: "टीम संवादासाठी अॅपमधील चॅट वापरा — वैयक्तिक चॅनेल टाळा.",
+                c2: "प्रत्येक मिशन अपडेट 15 मिनिटांत अहवाल द्या.",
+                c3: "ऑफलाइन असताना मॅन्युअली रेकॉर्ड करा आणि ऑनलाइन झाल्यावर सिंक करा.",
+                evac: "निर्वासन प्रोटोकॉल",
+                e1: "मिशन डॅशबोर्डमध्ये दर्शविलेल्या सुरक्षित मार्गांचे पालन करा.",
+                e2: "वृद्ध आणि अपंग लोकांना प्राधान्य द्या.",
+                e3: "शांत राहा आणि स्पष्ट संवाद ठेवा.",
+                e4: "क्षेत्र सुरक्षित घोषित करण्यापूर्वी लोकसंख्या तपासा.",
+                helpText: "एखाद्या विशिष्ट प्रक्रियेबद्दल स्पष्टता हवी आहे?",
+                contact: "कमांड सेंटरशी संपर्क साधा"
+            }
+        };
+
+        document.getElementById("languageSelect").addEventListener("change", function() {
+            const lang = this.value;
+            document.querySelectorAll("[data-key]").forEach(el => {
+                el.textContent = translations[lang][el.dataset.key];
             });
         });
     </script>
