--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Crisis Beacon | Dashboard</title>
+  <title>CrisisMitra | Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/feather-icons"></script>
 
@@ -64,7 +64,7 @@
   <!-- Header -->
   <header class="px-4 py-6 border-b border-[#333333]">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-medium">Crisis Beacon</a>
+      <a href="index.html" class="text-2xl font-medium">CrisisMitra</a>
       <div class="flex items-center gap-4">
         <a href="sos.html" class="bg-red-600 text-white px-4 py-2 rounded-full text-sm flex items-center gap-2">
           <i data-feather="alert-triangle" class="w-4 h-4"></i> <span data-i18n="sosBtn">SOS</span>
