--- a/volunteer.html
+++ b/volunteer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Volunteer Portal | Crisis Beacon</title>
+  <title>Volunteer Portal | CrisisMitra</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
@@ -42,7 +42,7 @@
   <!-- Header -->
   <header class="px-4 py-6 border-b border-[#333333]">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-medium" data-i18n="title">Crisis Beacon</a>
+      <a href="index.html" class="text-2xl font-medium" data-i18n="title">CrisisMitra</a>
       <div class="flex items-center gap-4">
         <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm flex items-center gap-2">
           <i data-feather="activity" class="w-4 h-4"></i> <span data-i18n="dashboard">Dashboard</span>
@@ -165,7 +165,7 @@
 
     const translations = {
       en: {
-        title: "Crisis Beacon",
+        title: "CrisisMitra",
         dashboard: "Dashboard",
         sos_alerts: "SOS Alerts",
         volunteer_name: "Volunteer Name",
