--- a/protocols.html
+++ b/protocols.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relief Protocols | Crisis Beacon</title>
+    <title>Relief Protocols | CrisisMitra</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <style>
@@ -43,7 +43,7 @@
     <!-- Header -->
     <header class="px-4 py-6 border-b border-[#333333]">
         <div class="max-w-6xl mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-medium">Crisis Beacon</a>
+            <a href="index.html" class="text-2xl font-medium">CrisisMitra</a>
             <div class="flex items-center gap-4">
                 <nav class="flex items-center gap-4 text-sm">
                     <a data-key="dashboard" href="dashboard.html" class="hover:text-blue-400">Dashboard</a>
