--- a/sos.html
+++ b/sos.html
@@ -1,179 +1,219 @@
-now this <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Send SOS | Crisis Beacon</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
+    <link rel="icon" href="./Material/logo.png" type="image/x-icon" />
+
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #0A0A0A;
-            color: #FFFFFF;
+      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap");
+      body {
+        font-family: "Inter", sans-serif;
+        background-color: #0a0a0a;
+        color: #ffffff;
+      }
+      .form-input {
+        background-color: #1a1a1a;
+        border: 1px solid #333333;
+        color: white;
+      }
+      .form-input:focus {
+        outline: none;
+        border-color: white;
+        box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.2);
+      }
+      .offline-badge {
+        animation: pulse 2s infinite;
+      }
+      @keyframes pulse {
+        0% {
+          opacity: 0.6;
         }
-        .form-input {
-            background-color: #1A1A1A;
-            border: 1px solid #333333;
-            color: white;
+        50% {
+          opacity: 1;
         }
-        .form-input:focus {
-            outline: none;
-            border-color: white;
-            box-shadow: 0 0 0 2px rgba(255,255,255,0.2);
+        100% {
+          opacity: 0.6;
         }
-        .offline-badge {
-            animation: pulse 2s infinite;
-        }
-        @keyframes pulse {
-            0% { opacity: 0.6; }
-            50% { opacity: 1; }
-            100% { opacity: 0.6; }
-        }
+      }
     </style>
-</head>
-<body class="min-h-screen bg-[#0A0A0A]">
+  </head>
+  <body class="min-h-screen bg-[#0A0A0A]">
     <!-- Header -->
     <header class="px-4 py-6 border-b border-[#333333]">
-        <div class="max-w-6xl mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-medium">Crisis Beacon</a>
-            <div class="flex items-center gap-2 bg-[#333333] px-3 py-1 rounded-full">
-                <i data-feather="wifi-off" class="w-4 h-4"></i>
-                <span class="text-sm offline-badge">Offline Mode</span>
-            </div>
+      <div class="max-w-6xl mx-auto flex justify-between items-center">
+        <a href="index.html" class="text-2xl font-medium">Crisis Beacon</a>
+        <div
+          class="flex items-center gap-2 bg-[#333333] px-3 py-1 rounded-full"
+        >
+          <i data-feather="wifi-off" class="w-4 h-4"></i>
+          <span class="text-sm offline-badge">Offline Mode</span>
         </div>
+      </div>
     </header>
 
     <main class="max-w-2xl mx-auto px-4 py-12">
-        <div class="text-center mb-12">
-            <h1 class="text-3xl font-medium mb-4">Send Distress Signal</h1>
-            <p class="text-[#D3D3D3]">This alert will be sent to all nearby responders with your location</p>
+      <div class="text-center mb-12">
+        <h1 class="text-3xl font-medium mb-4">Send Distress Signal</h1>
+        <p class="text-[#D3D3D3]">
+          This alert will be sent to all nearby responders with your location
+        </p>
+      </div>
+
+      <form class="space-y-6">
+        <div>
+          <label class="block mb-2">Your Name</label>
+          <input
+            type="text"
+            class="form-input w-full px-4 py-3 rounded-lg"
+            placeholder="Full name (optional)"
+          />
         </div>
 
-        <form class="space-y-6">
-            <div>
-                <label class="block mb-2">Your Name</label>
-                <input type="text" class="form-input w-full px-4 py-3 rounded-lg" placeholder="Full name (optional)">
-            </div>
+        <div>
+          <label class="block mb-2">Location</label>
+          <div class="relative">
+            <input
+              type="text"
+              id="locationInput"
+              class="form-input w-full px-4 py-3 rounded-lg bg-[#1A1A1A] border border-[#333333] text-white placeholder-[#666666]"
+              placeholder="Detecting..."
+              value="Detecting location..."
+              readonly
+            />
 
-            <div>
-                <label class="block mb-2">Location</label>
-<div class="relative">
-  <input 
-    type="text" 
-    id="locationInput"
-    class="form-input w-full px-4 py-3 rounded-lg bg-[#1A1A1A] border border-[#333333] text-white placeholder-[#666666]" 
-    placeholder="Detecting..."
-    value="Detecting location..."
-    readonly
-  >
+            <!-- Detect Location Button -->
+            <button
+              type="button"
+              id="detectLocation"
+              class="absolute right-12 top-3 text-[#D3D3D3] hover:text-white"
+              title="Detect Location"
+            >
+              <i data-feather="map-pin"></i>
+            </button>
 
-  <!-- Detect Location Button -->
-  <button 
-    type="button" 
-    id="detectLocation" 
-    class="absolute right-12 top-3 text-[#D3D3D3] hover:text-white"
-    title="Detect Location"
-  >
-    <i data-feather="map-pin"></i>
-  </button>
+            <!-- Redirect to Map Button -->
+            <button
+              type="button"
+              id="openMap"
+              class="absolute right-3 top-3 text-[#D3D3D3] hover:text-white"
+              title="Open Map to Select Location"
+            >
+              <i data-feather="map"></i>
+            </button>
+          </div>
 
-  <!-- Redirect to Map Button -->
-  <button 
-    type="button" 
-    id="openMap" 
-    class="absolute right-3 top-3 text-[#D3D3D3] hover:text-white"
-    title="Open Map to Select Location"
-  >
-    <i data-feather="map"></i>
-  </button>
-</div>
+          <p class="text-sm text-[#D3D3D3] mt-1">
+            We are using your device location services, or you can select
+            manually on the map.
+          </p>
 
-                <p class="text-sm text-[#D3D3D3] mt-1">
-                We are using your device location services, or you can select manually on the map.
-                </p>
+          <script>
+            feather.replace();
 
-                <script>
-                feather.replace();
-
-                // Detect location automatically
-                document.getElementById("detectLocation").addEventListener("click", () => {
+            // Detect location automatically
+            document
+              .getElementById("detectLocation")
+              .addEventListener("click", () => {
                 if (navigator.geolocation) {
-                    navigator.geolocation.getCurrentPosition((position) => {
-                    const { latitude, longitude } = position.coords;
-                    document.getElementById("locationInput").value = `${latitude.toFixed(5)}, ${longitude.toFixed(5)}`;
-                    }, () => {
-                    alert("Unable to retrieve location. Please enable GPS.");
-                    });
+                  navigator.geolocation.getCurrentPosition(
+                    (position) => {
+                      const { latitude, longitude } = position.coords;
+                      document.getElementById(
+                        "locationInput"
+                      ).value = `${latitude.toFixed(5)}, ${longitude.toFixed(
+                        5
+                      )}`;
+                    },
+                    () => {
+                      alert("Unable to retrieve location. Please enable GPS.");
+                    }
+                  );
                 } else {
-                    alert("Geolocation not supported by your browser.");
+                  alert("Geolocation not supported by your browser.");
                 }
-                });
+              });
 
-                // Redirect to map page to select manually
-                document.getElementById("openMap").addEventListener("click", () => {
-                window.location.href = "map.html"; // 🔗 Replace with your actual map page path
-                });
-                </script>
-
-            </div>
-
-            <div>
-                <label class="block mb-2">Type of Emergency</label>
-                <select class="form-input w-full px-4 py-3 rounded-lg">
-                    <option value="">Select emergency type</option>
-                    <option value="medical">Medical Emergency</option>
-                    <option value="trapped">Trapped/Rescue Needed</option>
-                    <option value="fire">Fire</option>
-                    <option value="flood">Flood</option>
-                    <option value="other">Other Critical Need</option>
-                </select>
-            </div>
-
-            <div>
-                <label class="block mb-2">Additional Details</label>
-                <textarea class="form-input w-full px-4 py-3 rounded-lg h-32" placeholder="Brief description of your emergency"></textarea>
-            </div>
-
-            <div>
-                <label class="block mb-2">Photo/Video Evidence (Optional)</label>
-                <div class="border-2 border-dashed border-[#333333] rounded-lg p-8 text-center hover:border-white transition-all cursor-pointer">
-                    <i data-feather="upload" class="w-8 h-8 mx-auto mb-2"></i>
-                    <p class="text-[#D3D3D3]">Click to upload or drag and drop</p>
-                    <p class="text-sm text-[#666666] mt-1">Files will be sent when connection is restored</p>
-                </div>
-            </div>
-
-            <div class="pt-6">
-                <button type="submit" class="w-full bg-white text-black px-6 py-4 rounded-lg font-medium text-lg flex items-center justify-center gap-2 hover:bg-opacity-90 transition-all">
-                    <i data-feather="send"></i> Send Emergency Alert
-                </button>
-            </div>
-        </form>
-
-        <div class="mt-12 p-4 bg-[#1A1A1A] rounded-lg border border-[#333333]">
-            <div class="flex items-start gap-3">
-                <i data-feather="alert-circle" class="w-5 h-5 mt-0.5"></i>
-                <div>
-                    <h3 class="font-medium mb-1">Offline Notice</h3>
-                    <p class="text-sm text-[#D3D3D3]">Your alert has been queued and will automatically send when connection is restored. Stay in this location if possible.</p>
-                </div>
-            </div>
+            // Redirect to map page to select manually
+            document.getElementById("openMap").addEventListener("click", () => {
+              window.location.href = "map.html"; // 🔗 Replace with your actual map page path
+            });
+          </script>
         </div>
+
+        <div>
+          <label class="block mb-2">Type of Emergency</label>
+          <select class="form-input w-full px-4 py-3 rounded-lg">
+            <option value="">Select emergency type</option>
+            <option value="medical">Medical Emergency</option>
+            <option value="trapped">Trapped/Rescue Needed</option>
+            <option value="fire">Fire</option>
+            <option value="flood">Flood</option>
+            <option value="other">Other Critical Need</option>
+          </select>
+        </div>
+
+        <div>
+          <label class="block mb-2">Additional Details</label>
+          <textarea
+            class="form-input w-full px-4 py-3 rounded-lg h-32"
+            placeholder="Brief description of your emergency"
+          ></textarea>
+        </div>
+
+        <div>
+          <label class="block mb-2">Photo/Video Evidence (Optional)</label>
+          <div
+            class="border-2 border-dashed border-[#333333] rounded-lg p-8 text-center hover:border-white transition-all cursor-pointer"
+          >
+            <i data-feather="upload" class="w-8 h-8 mx-auto mb-2"></i>
+            <p class="text-[#D3D3D3]">Click to upload or drag and drop</p>
+            <p class="text-sm text-[#666666] mt-1">
+              Files will be sent when connection is restored
+            </p>
+          </div>
+        </div>
+
+        <div class="pt-6">
+          <button
+            type="submit"
+            class="w-full bg-white text-black px-6 py-4 rounded-lg font-medium text-lg flex items-center justify-center gap-2 hover:bg-opacity-90 transition-all"
+          >
+            <i data-feather="send"></i> Send Emergency Alert
+          </button>
+        </div>
+      </form>
+
+      <div class="mt-12 p-4 bg-[#1A1A1A] rounded-lg border border-[#333333]">
+        <div class="flex items-start gap-3">
+          <i data-feather="alert-circle" class="w-5 h-5 mt-0.5"></i>
+          <div>
+            <h3 class="font-medium mb-1">Offline Notice</h3>
+            <p class="text-sm text-[#D3D3D3]">
+              Your alert has been queued and will automatically send when
+              connection is restored. Stay in this location if possible.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script>
-        feather.replace();
-        
-        // Simulate location detection
-        setTimeout(() => {
-            const locationInput = document.querySelector('input[type="text"][placeholder="Detecting..."]');
-            if (locationInput) {
-                locationInput.value = "Approx. 12.3456° N, 98.7654° W";
-                locationInput.classList.add('text-green-400');
-            }
-        }, 1500);
+      feather.replace();
+
+      // Simulate location detection
+      setTimeout(() => {
+        const locationInput = document.querySelector(
+          'input[type="text"][placeholder="Detecting..."]'
+        );
+        if (locationInput) {
+          locationInput.value = "Approx. 12.3456° N, 98.7654° W";
+          locationInput.classList.add("text-green-400");
+        }
+      }, 1500);
     </script>
-</body>
+  </body>
 </html>
