--- a/sos.html
+++ b/sos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Send SOS | Crisis Beacon</title>
+    <title>Send SOS | CrisisMitra</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="icon" href="./Material/logo.png" type="image/x-icon" />
@@ -45,7 +45,7 @@
     <!-- Header -->
     <header class="px-4 py-6 border-b border-[#333333]">
       <div class="max-w-6xl mx-auto flex justify-between items-center">
-        <a href="index.html" class="text-2xl font-medium">Crisis Beacon</a>
+        <a href="index.html" class="text-2xl font-medium">CrisisMitra</a>
         <div
           class="flex items-center gap-2 bg-[#333333] px-3 py-1 rounded-full"
         >
