--- a/dashboard.html
+++ b/dashboard.html
@@ -7,8 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="icon" href="./Material/logo.png" type="image/x-icon" />
-
-    <!-- Leaflet CSS -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -59,40 +57,83 @@
       .btn-clear:hover {
         background: #b91c1c;
       }
+
+      /* Collapsible Language Switch */
+      #lang-switch {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 50;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        background: rgba(10, 10, 10, 0.7);
+        backdrop-filter: blur(10px);
+        border: 1px solid #333;
+        border-radius: 9999px;
+        padding: 6px 10px;
+        box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+      }
+      #lang-switch.collapsed #lang-buttons {
+        opacity: 0;
+        width: 0;
+        overflow: hidden;
+        pointer-events: none;
+      }
+      #lang-switch:hover #lang-buttons {
+        opacity: 1;
+        width: auto;
+        pointer-events: auto;
+      }
     </style>
   </head>
 
   <body class="min-h-screen bg-[#0A0A0A]">
     <!-- Language Switch -->
-    <div class="fixed top-6 right-6 z-50 flex gap-2">
-      <button
-        id="lang-en"
-        class="px-3 py-1 bg-white text-black rounded-full text-sm font-medium hover:scale-105 transition"
-      >
-        English
-      </button>
-      <button
-        id="lang-hi"
-        class="px-3 py-1 bg-white text-black rounded-full text-sm font-medium hover:scale-105 transition"
-      >
-        हिन्दी
-      </button>
-      <button
-        id="lang-mr"
-        class="px-3 py-1 bg-white text-black rounded-full text-sm font-medium hover:scale-105 transition"
-      >
-        मराठी
-      </button>
+    <div id="lang-switch">
+      <i data-feather="globe" class="w-5 h-5 text-white"></i>
+      <div id="lang-buttons" class="flex gap-2 transition-all duration-300">
+        <button
+          id="lang-en"
+          class="px-3 py-1 bg-white text-black rounded-full text-sm font-medium hover:scale-105 transition"
+        >
+          EN
+        </button>
+        <button
+          id="lang-hi"
+          class="px-3 py-1 bg-white text-black rounded-full text-sm font-medium hover:scale-105 transition"
+        >
+          हि
+        </button>
+        <button
+          id="lang-mr"
+          class="px-3 py-1 bg-white text-black rounded-full text-sm font-medium hover:scale-105 transition"
+        >
+          म
+        </button>
+      </div>
     </div>
 
     <!-- Header -->
     <header class="px-4 py-6 border-b border-[#333333]">
       <div class="max-w-6xl mx-auto flex justify-between items-center">
         <a href="index.html" class="text-2xl font-medium">CrisisMitra</a>
-        <div class="flex items-center gap-4">
+        <div class="flex items-center gap-3">
+          <!-- Volunteer Login -->
+          <a
+            href="login.html"
+            class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm flex items-center gap-2 hover:bg-blue-700 transition"
+          >
+            <i data-feather="user" class="w-4 h-4"></i>
+            <span data-i18n="volunteerLogin">Volunteer Login</span>
+          </a>
+
+          <!-- SOS -->
           <a
             href="sos.html"
-            class="bg-red-600 text-white px-4 py-2 rounded-full text-sm flex items-center gap-2"
+            class="bg-red-600 text-white px-4 py-2 rounded-full text-sm flex items-center gap-2 hover:bg-red-700 transition"
           >
             <i data-feather="alert-triangle" class="w-4 h-4"></i>
             <span data-i18n="sosBtn">SOS</span>
@@ -101,12 +142,13 @@
       </div>
     </header>
 
+    <!-- Dashboard Content -->
     <main class="max-w-6xl mx-auto px-4 py-8">
       <h1 data-i18n="responseDashboard" class="text-3xl font-medium mb-8">
         Response Dashboard
       </h1>
 
-      <!-- Stats Overview -->
+      <!-- Stats -->
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
         <div class="stat-card p-6 rounded-xl">
           <div class="flex items-center justify-between">
@@ -157,71 +199,6 @@
         </div>
       </div>
 
-      <!-- Recent Alerts -->
-      <div class="mb-8">
-        <h2 data-i18n="recentAlerts" class="text-xl font-medium mb-4">
-          Recent Alerts
-        </h2>
-        <div class="grid grid-cols-1 gap-4">
-          <div class="card p-4 rounded-lg">
-            <div class="flex items-center justify-between">
-              <div class="flex items-center gap-4">
-                <div
-                  class="w-10 h-10 bg-red-600/20 rounded-full flex items-center justify-center"
-                >
-                  <i data-feather="alert-triangle" class="text-red-500"></i>
-                </div>
-                <div>
-                  <p class="font-medium" data-i18n="medicalEmergency">
-                    Medical Emergency
-                  </p>
-                  <p class="text-sm text-[#D3D3D3]">12.3456° N, 98.7654° W</p>
-                </div>
-              </div>
-              <div class="text-sm text-[#D3D3D3]">5 min ago</div>
-            </div>
-          </div>
-
-          <div class="card p-4 rounded-lg">
-            <div class="flex items-center justify-between">
-              <div class="flex items-center gap-4">
-                <div
-                  class="w-10 h-10 bg-yellow-600/20 rounded-full flex items-center justify-center"
-                >
-                  <i data-feather="alert-triangle" class="text-yellow-500"></i>
-                </div>
-                <div>
-                  <p class="font-medium" data-i18n="trappedBuilding">
-                    Trapped in Building
-                  </p>
-                  <p class="text-sm text-[#D3D3D3]">12.3478° N, 98.7632° W</p>
-                </div>
-              </div>
-              <div class="text-sm text-[#D3D3D3]">12 min ago</div>
-            </div>
-          </div>
-
-          <div class="card p-4 rounded-lg">
-            <div class="flex items-center justify-between">
-              <div class="flex items-center gap-4">
-                <div
-                  class="w-10 h-10 bg-blue-600/20 rounded-full flex items-center justify-center"
-                >
-                  <i data-feather="alert-triangle" class="text-blue-500"></i>
-                </div>
-                <div>
-                  <p class="font-medium" data-i18n="floodAssist">
-                    Flood Assistance
-                  </p>
-                  <p class="text-sm text-[#D3D3D3]">12.3421° N, 98.7689° W</p>
-                </div>
-              </div>
-              <div class="text-sm text-[#D3D3D3]">22 min ago</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <!-- Map -->
       <div class="mb-8">
         <h2 data-i18n="mapTitle" class="text-xl font-medium mb-4">
@@ -239,49 +216,26 @@
           </div>
         </div>
       </div>
-
-      <!-- Resources -->
-      <div>
-        <h2 data-i18n="resources" class="text-xl font-medium mb-4">
-          Response Resources
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-          <div class="card p-6 rounded-lg">
-            <div class="flex items-center gap-4 mb-4">
-              <div
-                class="w-12 h-12 bg-purple-600/20 rounded-full flex items-center justify-center"
-              >
-                <i data-feather="file-text" class="text-purple-500"></i>
-              </div>
-              <h3 data-i18n="protocols" class="text-lg font-medium">
-                Protocols
-              </h3>
-            </div>
-            <a
-              href="protocols.html"
-              class="block bg-[#1A1A1A] border border-[#333333] hover:border-blue-400 hover:bg-[#111111] transition-all rounded-lg px-6 py-4 text-center"
-            >
-              <p data-i18n="protocolDesc" class="text-[#D3D3D3] mb-2">
-                View emergency response protocols and procedures.
-              </p>
-              <span
-                class="text-blue-400 font-medium flex items-center justify-center gap-2"
-              >
-                <i data-feather="book-open" class="w-4 h-4"></i>
-                <span data-i18n="protocols">Protocols</span>
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
     </main>
 
-    <!-- Scripts -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script>
       feather.replace();
 
-      // Initialize map
+      // Scroll collapse for language switch
+      let lastScroll = 0;
+      window.addEventListener("scroll", () => {
+        const langSwitch = document.getElementById("lang-switch");
+        const currentScroll = window.scrollY;
+        if (currentScroll > lastScroll && currentScroll > 100) {
+          langSwitch.classList.add("collapsed");
+        } else {
+          langSwitch.classList.remove("collapsed");
+        }
+        lastScroll = currentScroll;
+      });
+
+      // Map
       const map = L.map("map").setView([20.5937, 78.9629], 5);
       L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
         maxZoom: 18,
@@ -326,51 +280,33 @@
       const translations = {
         en: {
           sosBtn: "SOS",
+          volunteerLogin: "Volunteer Login",
           responseDashboard: "Response Dashboard",
           activeAlerts: "Active Alerts",
           responders: "Responders",
           resolvedToday: "Resolved Today",
-          recentAlerts: "Recent Alerts",
-          medicalEmergency: "Medical Emergency",
-          trappedBuilding: "Trapped in Building",
-          floodAssist: "Flood Assistance",
           mapTitle: "Interactive Incident Map",
           clearMarkers: "Clear All Markers",
-          resources: "Response Resources",
-          protocols: "Protocols",
-          protocolDesc: "View emergency response protocols and procedures.",
         },
         hi: {
           sosBtn: "एसओएस",
+          volunteerLogin: "स्वयंसेवक लॉगिन",
           responseDashboard: "प्रतिक्रिया डैशबोर्ड",
           activeAlerts: "सक्रिय अलर्ट",
           responders: "उत्तरदाता",
           resolvedToday: "आज हल किए गए",
-          recentAlerts: "हाल के अलर्ट",
-          medicalEmergency: "चिकित्सा आपातकाल",
-          trappedBuilding: "भवन में फंसे",
-          floodAssist: "बाढ़ सहायता",
-          mapTitle: "इंटरैक्टिव घटना मानचित्र",
+          mapTitle: "इंटरएक्टिव घटना मानचित्र",
           clearMarkers: "सभी मार्कर हटाएं",
-          resources: "प्रतिक्रिया संसाधन",
-          protocols: "प्रोटोकॉल",
-          protocolDesc: "आपातकालीन प्रतिक्रिया प्रोटोकॉल और प्रक्रियाएँ देखें।",
         },
         mr: {
           sosBtn: "एसओएस",
+          volunteerLogin: "स्वयंसेवक लॉगिन",
           responseDashboard: "प्रतिसाद डॅशबोर्ड",
           activeAlerts: "सक्रिय चेतावणी",
           responders: "प्रतिसादकर्ते",
           resolvedToday: "आज निराकरण झालेले",
-          recentAlerts: "अलीकडील चेतावणी",
-          medicalEmergency: "वैद्यकीय आपत्काल",
-          trappedBuilding: "इमारतीत अडकलेले",
-          floodAssist: "पूर मदत",
           mapTitle: "परस्परसंवादी घटना नकाशा",
           clearMarkers: "सर्व मार्कर साफ करा",
-          resources: "प्रतिसाद संसाधने",
-          protocols: "प्रोटोकॉल",
-          protocolDesc: "आपत्कालीन प्रतिसाद प्रोटोकॉल आणि प्रक्रिया पहा.",
         },
       };
 
