--- a/sos.html
+++ b/sos.html
@@ -15,6 +15,24 @@
         background-color: #0a0a0a;
         color: #ffffff;
       }
+
+      /* Collapsible header */
+      header {
+        position: sticky;
+        top: 0;
+        z-index: 50;
+        backdrop-filter: blur(10px);
+        background: rgba(10, 10, 10, 0.8);
+        transition: all 0.3s ease;
+      }
+      header.collapsed {
+        padding-top: 0.5rem !important;
+        padding-bottom: 0.5rem !important;
+        background: rgba(10, 10, 10, 0.6);
+        border-color: #222;
+        box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
+      }
+
       .form-input {
         background-color: #1a1a1a;
         border: 1px solid #333333;
@@ -25,6 +43,7 @@
         border-color: white;
         box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.2);
       }
+
       .offline-badge {
         animation: pulse 2s infinite;
       }
@@ -43,7 +62,9 @@
   </head>
   <body class="min-h-screen bg-[#0A0A0A]">
     <!-- Header -->
-    <header class="px-4 py-6 border-b border-[#333333]">
+    <header
+      class="px-4 py-6 border-b border-[#333333] transition-all duration-300"
+    >
       <div class="max-w-6xl mx-auto flex justify-between items-center">
         <a href="index.html" class="text-2xl font-medium">CrisisMitra</a>
         <div
@@ -59,11 +80,11 @@
       <div class="text-center mb-12">
         <h1 class="text-3xl font-medium mb-4">Send Distress Signal</h1>
         <p class="text-[#D3D3D3]">
-          This alert will be sent to all nearby responders with your location
+          This alert will be sent to all nearby responders with your location.
         </p>
       </div>
 
-      <form class="space-y-6">
+      <form id="sosForm" class="space-y-6">
         <div>
           <label class="block mb-2">Your Name</label>
           <input
@@ -110,38 +131,6 @@
             We are using your device location services, or you can select
             manually on the map.
           </p>
-
-          <script>
-            feather.replace();
-
-            // Detect location automatically
-            document
-              .getElementById("detectLocation")
-              .addEventListener("click", () => {
-                if (navigator.geolocation) {
-                  navigator.geolocation.getCurrentPosition(
-                    (position) => {
-                      const { latitude, longitude } = position.coords;
-                      document.getElementById(
-                        "locationInput"
-                      ).value = `${latitude.toFixed(5)}, ${longitude.toFixed(
-                        5
-                      )}`;
-                    },
-                    () => {
-                      alert("Unable to retrieve location. Please enable GPS.");
-                    }
-                  );
-                } else {
-                  alert("Geolocation not supported by your browser.");
-                }
-              });
-
-            // Redirect to map page to select manually
-            document.getElementById("openMap").addEventListener("click", () => {
-              window.location.href = "map.html"; // 🔗 Replace with your actual map page path
-            });
-          </script>
         </div>
 
         <div>
@@ -201,19 +190,103 @@
       </div>
     </main>
 
-    <script>
+    <!-- Firebase & Logic -->
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-analytics.js";
+      import {
+        getDatabase,
+        ref,
+        push,
+        set,
+      } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-database.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyDSRuiYXqJrHmYphpx_sr3WOCGYRokVpLM",
+        authDomain: "crisismitra.firebaseapp.com",
+        databaseURL: "https://crisismitra-default-rtdb.firebaseio.com",
+        projectId: "crisismitra",
+        storageBucket: "crisismitra.firebasestorage.app",
+        messagingSenderId: "539607481271",
+        appId: "1:539607481271:web:fa3759fa9e39483ae38632",
+        measurementId: "G-QYZMHR61M3",
+      };
+
+      const app = initializeApp(firebaseConfig);
+      getAnalytics(app);
+      const db = getDatabase(app);
       feather.replace();
 
-      // Simulate location detection
-      setTimeout(() => {
-        const locationInput = document.querySelector(
-          'input[type="text"][placeholder="Detecting..."]'
-        );
-        if (locationInput) {
-          locationInput.value = "Approx. 12.3456° N, 98.7654° W";
-          locationInput.classList.add("text-green-400");
+      // Collapse header on scroll
+      let lastScrollTop = 0;
+      const header = document.querySelector("header");
+
+      window.addEventListener("scroll", () => {
+        const scrollTop =
+          window.pageYOffset || document.documentElement.scrollTop;
+        if (scrollTop > lastScrollTop && scrollTop > 80) {
+          header.classList.add("collapsed");
+        } else {
+          header.classList.remove("collapsed");
         }
-      }, 1500);
+        lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
+      });
+
+      // Location detection
+      document
+        .getElementById("detectLocation")
+        .addEventListener("click", () => {
+          if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(
+              (pos) => {
+                const { latitude, longitude } = pos.coords;
+                document.getElementById(
+                  "locationInput"
+                ).value = `${latitude.toFixed(5)}, ${longitude.toFixed(5)}`;
+              },
+              () => alert("Unable to retrieve location. Please enable GPS.")
+            );
+          } else {
+            alert("Geolocation not supported by your browser.");
+          }
+        });
+
+      // Map redirect
+      document.getElementById("openMap").addEventListener("click", () => {
+        window.location.href = "map.html";
+      });
+
+      // Form submission
+      document
+        .getElementById("sosForm")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
+          const name = e.target
+            .querySelector('input[type="text"]')
+            .value.trim();
+          const location = document.getElementById("locationInput").value;
+          const type = e.target.querySelector("select").value;
+          const details = e.target.querySelector("textarea").value.trim();
+
+          if (!location || !type) {
+            alert("Please fill at least location and emergency type.");
+            return;
+          }
+
+          const sosRef = ref(db, "sos_alerts");
+          const newAlertRef = push(sosRef);
+
+          await set(newAlertRef, {
+            name: name || "Anonymous",
+            location,
+            type,
+            details,
+            timestamp: new Date().toISOString(),
+          });
+
+          alert("🚨 SOS alert sent successfully!");
+          e.target.reset();
+        });
     </script>
   </body>
 </html>
