--- a/sos.html
+++ b/sos.html
@@ -71,7 +71,7 @@
           class="flex items-center gap-2 bg-[#333333] px-3 py-1 rounded-full"
         >
           <i data-feather="wifi-off" class="w-4 h-4"></i>
-          <span class="text-sm offline-badge">Offline Mode</span>
+          <span class="text-sm offline-badge">Your Helper</span>
         </div>
       </div>
     </header>
